login fixed and server-owner field added

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASS=PauloCesar1252@
 DB_NAME=discord_clone
 
 SECRET_KEY=uj!H9l{m|>e~HYD5S[QX9rQ+x9Fn1l+59AtO3.$vz}Ax8I($~HXiVQ<h9'2<0pq
